@@ -1,4 +1,5 @@
 27.10.2018 Version 0.2.28
+Permission is allowed for admin to save on existing processes/pipelines in spite of they have beed used in public.
 Amazon folder and commands are updated as dbhost_username_profileid to eliminate conflict. 
 Amazon loading status feature is updated to keep sshtext available while reloading.
 
